--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -4,29 +4,41 @@
     aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse menuBar text-center m-auto" id="conteudoNavbarSuportado">
-    <ul class="navbar-nav m-auto d-flex align-items-start">
+
+  <div class="collapse navbar-collapse menuBar align-items-center text-center m-auto" id="conteudoNavbarSuportado">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link ml-3" href="#"><img src="https://i.imgur.com/vEJY0PZ.png" alt="logo" width="120px"
             height="31px" class="img-fluid"> <span class="sr-only">(página atual)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link mr-3 aling" routerLink='/inicio'>Home</a>
+        <a class="nav-link mr-3 aling" routerLink='/inicio'>Início</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link mr-3 " href="#">Sobre</a>
+        <a class="nav-link mr-3 " routerLink='/ajuda'>Sobre</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link mr-3  " routerLink='/login'>Contato</a>
+        <a class="nav-link mr-3  " routerLink='/login'>Entrar</a>
       </li>
-      <form class="form-inline ">
-        <div>
-          <input class="form-control mr-xl-2 ml-5" style="min-width: 60px;" type="search" placeholder="Pesquisar"
-            aria-label="Pesquisar">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-        </div>
-      </form>
+      <li class="nav-item active">
+        <a class="nav-link mr-3  " routerLink='/cadastro'>Cadastrar</a>
+      </li>
     </ul>
+
+    <div class="collapse navbar-collapse menuBar  justify-content-end">
+
+      <ul class="align-items-center justify-content-end">
+        <form class="form-inline">
+          <div>
+            <input class="form-control mr-xl-2 ml-5" style="min-width: 60px;" type="search" placeholder="Pesquisar"
+              aria-label="Pesquisar">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+        </div>
+        </form>
+      </ul>
+
+    </div>
+
   </div>
 </nav>
 
