--- a/FrontEnd/eRural/src/app/edit/produto/produto.component.html
+++ b/FrontEnd/eRural/src/app/edit/produto/produto.component.html
@@ -1,56 +1,26 @@
 <div class="container mt-5 mb-5">
   <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center text-secondary">Atualizar Produto</h1>
-    </div>
-  </div>
+      <div class="col-md-12">
 
-  <div class="row d-flex align-itens-center mt-5">
+          <h1 class="text-center mt-5">Atualizar Produto</h1>
 
-    <div class="col-md-12">
-      <div id="formExemplo" data-toggle="validator" role="form">
-
-        <div class="form-group">
-          <label for="textNome" class="control-label">Nome</label>
-          <input [(ngModel)]='produto.nome' id="textNome" class="form-control" placeholder="Nome do Produto" type="text"
-            required>
-        </div>
-
-        <div class="form-group">
-          <label for="textQuantidade" class="control-label">Quantidade</label>
-          <input [(ngModel)]='produto.quantidade' id="textQuantidade" class="form-control"
-            placeholder="Digite a Quantidade" type="number" required>
-        </div>
-
-        <div class="form-group">
-          <label for="textPeso" class="control-label">Peso</label>
-          <input [(ngModel)]='produto.peso' id="textPeso" class="form-control" placeholder="Digite o Peso" type="number"
-            required>
-        </div>
-
-        <div class="form-group">
-          <label for="textPreco" class="control-label">Preço</label>
-          <input [(ngModel)]='produto.preco' id="textPreco" class="form-control" placeholder="Digite o Preço"
-            type="number" required>
-        </div>
-
-        <div class="form-group">
-          <label for="textLink" class="control-label">Link</label>  
-          <input [(ngModel)]='produto.imagem' id="textLink" class="form-control"
-            placeholder="Cole o link da imagem aqui" type="text" required>
-        </div>
-
-        <div class="form-group">
-          <label for="textLink" class="control-label">Descrição</label>
-          <input [(ngModel)]='produto.descricao' id="textLink" class="form-control" placeholder="Descrição produto"
-            type="text" required>
-        </div>
-
-        <div class="d-flex justify-content-center mb-5 mt-5">
-          <button type="submit" class="btn btn-outline-danger mr-4" routerLink="/listaProdutos">Cancelar</button>
-          <button type="submit" class="btn btn-success" (click)='atualiza()'>Atualizar</button>
-        </div>
       </div>
-    </div>
+      <div class="row d-flex justify-content-center">
+          <div class="col-md-6">
+
+              <div class="form-group justify-content-center text-center">
+
+                  <label for='descricao'>Descrição</label>
+                  <input type="text" class="form-control" id="descricao" [(ngModel)]='produto.descricao'>
+
+
+              </div>
+              <div class="d-flex justify-content-center">
+                  <button class="btn btn-danger mr-4" routerLink='/admin'>Cancelar</button>
+                  <button class="btn btn-success" (click)='atualiza()'>Atualizar</button>
+              </div>
+          </div>
+      </div>
   </div>
 </div>
+
