--- a/FrontEnd/eRural/src/app/edit/produto/produto.component.html
+++ b/FrontEnd/eRural/src/app/edit/produto/produto.component.html
@@ -11,39 +11,39 @@
       <div id="formExemplo" data-toggle="validator" role="form">
 
         <div class="form-group">
-          <label for="textNome" class="control-label">Nome</label>
-          <input [(ngModel)]='produto.nome' id="textNome" class="form-control" placeholder="Nome do Produto" type="text"
-            required>
+          <label for="nome" class="control-label">Nome</label>
+          <input [(ngModel)]='produto.nome' id="nome" class="form-control" placeholder="Nome do Produto" type="text">
+            <!-- required -->
         </div>
 
         <div class="form-group">
-          <label for="textQuantidade" class="control-label">Quantidade</label>
-          <input [(ngModel)]='produto.quantidade' id="textQuantidade" class="form-control"
-            placeholder="Digite a Quantidade" type="number" required>
+          <label for="quantidade" class="control-label">Quantidade</label>
+          <input [(ngModel)]='produto.quantidade' id="quantidade" class="form-control"
+            placeholder="Digite a Quantidade" type="number"> <!-- required -->
         </div>
 
         <div class="form-group">
-          <label for="textPeso" class="control-label">Peso</label>
-          <input [(ngModel)]='produto.peso' id="textPeso" class="form-control" placeholder="Digite o Peso" type="number"
-            required>
+          <label for="peso" class="control-label">Peso</label>
+          <input [(ngModel)]='produto.peso' id="peso" class="form-control" placeholder="Digite o Peso" type="number">
+            <!-- required -->
         </div>
 
         <div class="form-group">
-          <label for="textPreco" class="control-label">Preço</label>
-          <input [(ngModel)]='produto.preco' id="textPreco" class="form-control" placeholder="Digite o Preço"
-            type="number" required>
+          <label for="preco" class="control-label">Preço</label>
+          <input [(ngModel)]='produto.preco' id="preco" class="form-control" placeholder="Digite o Preço"
+            type="number"> <!-- required -->
         </div>
 
         <div class="form-group">
-          <label for="textLink" class="control-label">Link</label>  
-          <input [(ngModel)]='produto.imagem' id="textLink" class="form-control"
-            placeholder="Cole o link da imagem aqui" type="text" required>
+          <label for="imagem" class="control-label">Link</label>
+          <input [(ngModel)]='produto.imagem' id="imagem" class="form-control"
+            placeholder="Cole o link da imagem aqui" type="text"> <!-- required -->
         </div>
 
         <div class="form-group">
-          <label for="textLink" class="control-label">Descrição</label>
-          <input [(ngModel)]='produto.descricao' id="textLink" class="form-control" placeholder="Descrição produto"
-            type="text" required>
+          <label for="descricao" class="control-label">Descrição</label>
+          <input [(ngModel)]='produto.descricao' id="descricao" class="form-control" placeholder="Descrição produto"
+            type="text"> <!-- required -->
         </div>
 
         <div class="d-flex justify-content-center mb-5 mt-5">
