--- a/FrontEnd/eRural/src/app/menu/menu.component.html
+++ b/FrontEnd/eRural/src/app/menu/menu.component.html
@@ -32,7 +32,7 @@
       <ul class="align-items-center justify-content-center ">
         <form class="form-inline mt-2 ">
           <div>
-            <input class="form-control mr-xl-2 ml-5 " style="min-width: 550px;" type="search" placeholder="Pesquisar"
+            <input class="form-control mr-xl-2 ml-5 " style="max-width: 550px;" type="search" placeholder="Pesquisar"
               aria-label="Pesquisar">
             <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Pesquisar</button>
           </div>
